fix 100vh on mobile

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -6,6 +6,5 @@
   overflow: hidden;
  
   width: 100vw;
-  height: 100vh;
   background: linear-gradient(122.76deg, #FFA2A2 4.09%, #FF7B7B 91.04%);
 }
